# Kalky

./: BaseValue.h  CMakeLists.txt  ExpressionValue.h  FlatValue.h  SumValue.h  ValueCollection.h  main.cpp
